Resolves responsive layout issues across devices

--- a/_sass/_redesign.scss
+++ b/_sass/_redesign.scss
@@ -15,6 +15,8 @@ $content-with-panel-wide-screen-padding: 120px;
 $content-with-panel-reduced-padding: 40px;
 $content-with-panel-collapsed-max: 834px;
 $content-with-panel-expanded-min: 835px;
+$max-iphone-width: 428px;
+$min-past-iphone-width: 429px;
 
 .landing-page-content__right-panel {
     background: #fff;
@@ -55,55 +57,57 @@ $content-with-panel-expanded-min: 835px;
                 flex-basis: 420px;
                 flex-grow: 0;
                 flex-shrink: 1;
+                max-width: 420px;
             }
             @media screen and (max-width: $content-with-panel-collapsed-max) {
-                flex-basis: calc(100% - 40px);
+                flex-basis: 100%;
                 padding-top: 0;
             }
-            padding-top: 2em;
-            &:not(:has(.solutions-card-grid)) {
-                @media screen and (max-width: $content-with-panel-collapsed-max) {
+            &.landing-page-content__right-panel--content--side-panel__has-card-grid {
+                padding-top: 2em;
+                padding-bottom: 2em;
+            }
+            &.landing-page-content__right-panel--content--side-panel__without-card-grid {
+                @media screen and (min-width: $min-past-iphone-width) and (max-width: $content-with-panel-collapsed-max) {
                     padding-left: 40px;
                     padding-right: 40px;
                     flex-basis: calc(100% - 80px);
                 }
-                // @media screen and (min-width: 834px) {
-                //     padding-left: 2em;
-                //     padding-right: 2em;
-                // }
+                @media screen and (max-width: $max-iphone-width) {
+                    padding-left: 0;
+                    padding-right: 0;
+                    flex-basis: 100%;
+                }
             }
-            &:has(.solutions-card-grid) {
-                > .solutions-card-grid {
-                    > .solutions-card-grid--card-wrapper {
-                        @media screen and (min-width: $content-with-panel-expanded-min) {
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-around;
-                            align-items: center;
-                            flex-wrap: wrap;
-                        }
-                        @media screen and (min-width: 701) and (max-width: $content-with-panel-collapsed-max) {
-                            display: grid;
-                            grid-template-columns: 1fr 1fr;
-                        }
+            > .solutions-card-grid {
+                > .solutions-card-grid--card-wrapper {
+                    @media screen and (min-width: $content-with-panel-expanded-min) {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-around;
+                        align-items: center;
+                        flex-wrap: wrap;
+                    }
+                    @media screen and (min-width: 701) and (max-width: $content-with-panel-collapsed-max) {
+                        display: grid;
+                        grid-template-columns: 1fr 1fr;
+                    }
+                    @media screen and (max-width: 700px) {
+                        display: grid;
+                        grid-template-columns: 1fr;
+                    }
+                    padding: 2em 0;
+                    > .solutions-card-grid--card-wrapper--card {
                         @media screen and (max-width: 700px) {
-                            display: grid;
-                            grid-template-columns: 1fr;
-                        }
-                        padding: 2em 0;
-                        > .solutions-card-grid--card-wrapper--card {
-                            @media screen and (max-width: 700px) {
-                                width: calc(100% - 40px);
-                            }
+                            width: calc(100% - 40px);
                         }
                     }
                 }
-                .solutions-card-grid--card-wrapper--card--content {
-                    @include body-small;
-                    color: $primary-open-sky-s2;
-                }
             }
-            padding-bottom: 2em;
+            .solutions-card-grid--card-wrapper--card--content {
+                @include body-small;
+                color: $primary-open-sky-s2;
+            }
             > .landing-page-content__right-panel--content-side-panel--header {
                 display: flex;
                 flex-direction: row;
@@ -114,13 +118,10 @@ $content-with-panel-expanded-min: 835px;
                     white-space: nowrap;
                 }
             }
-            &:has(.resource-grid) {
-                padding-left: 0;
-                @include gradient-open-sky;
-            }
             > .draft-3-landing-page--button-stack {
                 
-                @media screen and (min-width: $content-with-panel-expanded-min) and (max-width: 1439px) {
+                @media screen and (max-width: $content-with-panel-collapsed-max)
+                and (min-width: $min-past-iphone-width) {
                     display: grid;
                     grid-template-columns: 1fr 1fr;
                     grid-gap: 2em;
@@ -128,7 +129,7 @@ $content-with-panel-expanded-min: 835px;
                     width: calc(100% - 4em);
                 }
                 @media screen and (min-width: $content-with-panel-expanded-min), 
-                screen and (max-width: $content-with-panel-collapsed-max) {
+                screen and (max-width: $max-iphone-width) {
                     display: flex;
                     flex-direction: column;
                     justify-content: space-evenly;
@@ -139,8 +140,12 @@ $content-with-panel-expanded-min: 835px;
                 @media screen and (max-width: $content-with-panel-collapsed-max) {
                     width: 100%;
                 }
-                
-                height: 100%;
+                @media screen and (min-width: $content-with-panel-expanded-min) {
+                    padding-top: 110px;
+                }
+                @media screen and (max-width: $max-iphone-width) {
+                    padding-left: calc((100% - 350px) / 2);
+                }
                 > .draft-3-landing-page--button-stack--button {
                     @media screen and (min-width: $content-with-panel-expanded-min) and (max-width: 1439px) {
                         flex-basis: 50%;
@@ -306,17 +311,10 @@ $content-with-panel-expanded-min: 835px;
                             height: 100%;
                         }
                     }
-                    // > img {
-                    //     width: 100%;
-                    //     height: 100%;
-                    // }
                     @media screen and (min-width: 834px) {
                         &.landing-page-hero--images--image__desktop {
                             display: block;
                             @include gradient-golden-sunrise;
-                            // &:nth-of-type(2) {
-                            //     @include gradient-purple-mint;
-                            // }
                         }
                         &.landing-page-hero--images--image__mobile {
                             display: none;
@@ -536,7 +534,7 @@ $content-with-panel-expanded-min: 835px;
 }
 
 .redesign-button--wrapper {
-    width: 100%;
+    width: 350px;
     > .redesign-button--anchor {
         display: inline-block;
         width: 350px;
@@ -813,7 +811,6 @@ $content-with-panel-expanded-min: 835px;
                     flex-shrink: 1;
                 }
                 @media screen and (max-width: $community-voices-vert-view-max) {
-                    // flex-basis: 100%;
                     flex-grow: 0;
                     flex-shrink: 0;
                 }
